--- a/ROS_IMUUtils/Gimbal.xaml
+++ b/ROS_IMUUtils/Gimbal.xaml
@@ -1,7 +1,7 @@
 ﻿<UserControl x:Class="ROS_IMUUtil.Gimbal"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" SizeChanged="UserControl_SizeChanged" Width="200" Height="200" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
+                      Loaded="UserControl_Loaded" SnapsToDevicePixels="True" Width="200" Height="200" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006">
     
         <Canvas Width="200" Height="200" ClipToBounds="True">
         <Image Height="800" HorizontalAlignment="Left" Name="AngleMeter" Stretch="Fill" VerticalAlignment="Top" Width="203" Source="/ROS_IMUUtils;component/Images/Horizon_GroundSky.bmp" Margin="0,-300,0,0" >
