--- a/CompressedImageView/MainWindow.xaml
+++ b/CompressedImageView/MainWindow.xaml
@@ -66,15 +66,18 @@
         <!-- END user control interfaces -->
 
 
-        <Grid Height="185" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="172,436,0,421" Width="50">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="20*" />
-                <RowDefinition Height="100*" />
-            </Grid.RowDefinitions>
-            <Slider Grid.Row="1" Height="130"  Name="slider1"  Width="25" ValueChanged="slider1_ValueChanged" Orientation="Vertical"  />
-            <TextBlock Grid.Row="0" HorizontalAlignment="Left" Name="textBlock1" Text="Velocity Slider" Width="50" TextAlignment="Center" TextWrapping="WrapWithOverflow" />
+        <Grid Height="35" HorizontalAlignment="Left" VerticalAlignment="top" Width="250" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition Width="12" />
+                <ColumnDefinition Width="48" />
+                <ColumnDefinition Width="130"/>
+                <ColumnDefinition Width="30*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock HorizontalAlignment="Center" Name="textBlock1" Text="Max Velocity" Width="62" TextAlignment="Center" TextWrapping="WrapWithOverflow" Grid.ColumnSpan="3" Margin="2,0" />
+            <Slider Grid.Column="3" Name="slider1" ValueChanged="slider1_ValueChanged" Orientation="Horizontal" Width="130" VerticalAlignment="Center"/>
+            <TextBlock Grid.Column="4" HorizontalAlignment="Center" VerticalAlignment="Center" Name="textblock2" Text="{Binding ElementName=slider1, Path=Value}"/>
         </Grid>
-        
 
 
         <Grid VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,76,30">
